# fomc-analysis

./: .env.example  .gitignore  BACKTEST_V3_IMPLEMENTATION.md  CLAUDE.md  COMPLETE_VERIFICATION.md  E2E_BACKTEST_GUIDE.md  EARNINGS_FRAMEWORK_SUMMARY.md  EARNINGS_PIPELINE_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  README_EARNINGS.md  UX_IMPLEMENTATION.md  UX_IMPROVEMENT_PLAN.md  VERIFICATION_FEATURE.md  VERIFICATION_SUMMARY.md  alembic.ini  create_demo_data.py  pyproject.toml  run_e2e_backtest.py  test_visualization.py
alembic/: env.py
alembic/versions/: 20240201_000001_initial_schema.py
cli/: __init__.py  click.py
configs/: contract_mapping.yaml  generated_contract_mapping.yaml
configs/earnings/: default_keywords.yaml
dashboard/: README.md  app.py
dashboard/pages/: earnings_trainer.py
docs/: ACTIONABLE_INSIGHTS.md  ASYNC_BATCHING_PERFORMANCE.md  BACKTEST_V3_GUIDE.md  DASHBOARD.md  DATABASE.md  EARNINGS_FRAMEWORK.md  EARNINGS_KALSHI_FRAMEWORK.md  EARNINGS_PIPELINE_NOTES.md  EARNINGS_QUICKSTART.md  EARNINGS_VERIFICATION_REPORT.md  FOMC_VS_EARNINGS_COMPARISON.md  KALSHI_ANALYSIS.md  MICROSTRUCTURE_EDGE_PLAN.md  OUTCOMES_DATABASE_README.md  QUANT_ANALYSIS.md  REAL_KALSHI_CONTRACTS_DISCOVERY.md  VALIDATION_REPORT.md
examples/: backtest_v3_analysis.py  backtest_v3_stress.py  earnings_example.py  run_backtest_v3.sh  verify_earnings_framework.py
scripts/: analyze_earnings_microstructure.py  analyze_market_efficiency.py  analyze_trading_opportunities.py  backfill_earnings_trades.py  batch_train_earnings.py  build_ground_truth.py  build_outcomes_database.py  explore_kalshi_earnings_contracts.py  fetch_earnings_transcripts.py  fetch_historical_prices.py  fetch_real_transcripts.py  load_backtest_results.py  load_grid_search.py  load_upcoming_predictions.py  paper_trade.py  pipeline.py  predict_earnings.py  query_outcomes_insights.py  run_expanded_backtest.py  run_real_backtest.py  test_batch_performance.py  track_kalshi_prices.py  train_earnings_model.py  validate_profitability.py  validate_word_detection.py  verify_outcomes_database.py
src/earnings_analysis/: __init__.py  backtester.py  config.py  ground_truth.py  synthetic_history.py
tests/: __init__.py  test_backtest_grid_sweep.py  test_backtester.py  test_backtester_v3.py  test_db_ingestion.py  test_featurizer.py  test_kalshi_client_factory.py  test_kalshi_contract_analyzer.py  test_microstructure.py  test_models.py  test_parsing.py  test_predictor.py  test_threshold_contracts.py  test_variants.py
(+102 files in other folders)
